# NI-Bounty-Platform-Backend

./: .env  Cargo.toml
database/: init.sql  sample_data.txt
handlers/: Cargo.toml
handlers/src/: bounties.rs  lib.rs
models/: Cargo.toml
models/src/: bounties.rs
scripts/: create_table.sh
server/: Cargo.toml
server/src/: lib.rs
src/: lib.rs  main.rs
src/models/: bounties.rs  mod.rs  prelude.rs
src/routes/: bounties.rs  mod.rs
storage/: Cargo.toml
storage/src/: lib.rs  mutation.rs  query.rs
utils/: Cargo.toml
