[package]
name = "ni-bounty-platform-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
sea-orm = { version = "0.12.2", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.183", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["cors"] }


