[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
uuid = "1.4.1"
serde_json = "1.0.104"

[dependencies.sea-orm]
version = "0.12.2"
